industry data - added year and month column

--- a/Explore_&Clean_Employee_Statistics.ipynb
+++ b/Explore_&Clean_Employee_Statistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:40.362763Z",
@@ -142,7 +142,7 @@
        "4    Total nonfarm  ALL EMPLOYEES, THOUSANDS  All employees  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,6 +153,7 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "from datetime import datetime,date\n",
+    "from sqlalchemy import create_engine\n",
     "\n",
     "# File to Load\n",
     "CESDF=pd.read_pickle('resources/CES2020.pkl',compression='gzip')\n",
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:40.377765Z",
@@ -191,7 +192,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:41.252407Z",
@@ -220,7 +221,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:43.202212Z",
@@ -257,7 +258,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:45.218485Z",
@@ -283,7 +284,7 @@
        "62"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:45.905053Z",
@@ -395,7 +396,7 @@
        "max    2020.000000  152463.000000    12.000000"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:47.315353Z",
@@ -547,7 +548,7 @@
        "4    Total nonfarm  ALL EMPLOYEES, THOUSANDS  All employees  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:15:08.498468Z",
@@ -583,7 +584,7 @@
        "(2048, 11)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:18:01.735681Z",
@@ -697,7 +698,7 @@
        "4  2015      5  141525.0  All employees  2015-5"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:18:50.172974Z",
@@ -1060,7 +1061,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:20:23.132431Z",
@@ -1121,7 +1122,7 @@
        "           names=[None, 'short_title'])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:20:42.462852Z",
@@ -1162,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1465,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1475,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1511,7 @@
        "      <th>admin_and_waste_services</th>\n",
        "      <th>arts_entertainment_and_recreation</th>\n",
        "      <th>construction</th>\n",
-       "      <th>durable goods</th>\n",
+       "      <th>durable_goods</th>\n",
        "      <th>edu_and_health_services</th>\n",
        "      <th>educational_services</th>\n",
        "      <th>federal</th>\n",
@@ -1671,7 +1672,7 @@
        "4                             8732.4                            2129.2   \n",
        "\n",
        "                                                                \\\n",
-       "short_title construction durable goods edu_and_health_services   \n",
+       "short_title construction durable_goods edu_and_health_services   \n",
        "0                 6320.0        7752.0                 21741.0   \n",
        "1                 6547.0        7770.0                 22215.0   \n",
        "2                 6598.0        7756.0                 22260.0   \n",
@@ -1729,7 +1730,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1778,7 +1779,277 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th colspan=\"18\" halign=\"left\">value</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>short_title</th>\n",
+       "      <th></th>\n",
+       "      <th>all_employees</th>\n",
+       "      <th>accom_food_services</th>\n",
+       "      <th>admin_and_waste_services</th>\n",
+       "      <th>arts_entertainment_and_recreation</th>\n",
+       "      <th>construction</th>\n",
+       "      <th>durable_goods</th>\n",
+       "      <th>edu_and_health_services</th>\n",
+       "      <th>educational_services</th>\n",
+       "      <th>federal</th>\n",
+       "      <th>...</th>\n",
+       "      <th>professional_and_business_services</th>\n",
+       "      <th>professional_and_technical_services</th>\n",
+       "      <th>real_estate_and_rental_leasing</th>\n",
+       "      <th>retail_trade</th>\n",
+       "      <th>service-providing</th>\n",
+       "      <th>state_government</th>\n",
+       "      <th>trade_transportation_and_utilities</th>\n",
+       "      <th>transportation_and_warehousing</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-1</td>\n",
+       "      <td>140568.0</td>\n",
+       "      <td>12790.7</td>\n",
+       "      <td>8719.9</td>\n",
+       "      <td>2124.7</td>\n",
+       "      <td>6320.0</td>\n",
+       "      <td>7752.0</td>\n",
+       "      <td>21741.0</td>\n",
+       "      <td>3439.1</td>\n",
+       "      <td>2745.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19442.0</td>\n",
+       "      <td>8526.7</td>\n",
+       "      <td>2067.7</td>\n",
+       "      <td>15520.2</td>\n",
+       "      <td>121068.0</td>\n",
+       "      <td>5065.0</td>\n",
+       "      <td>26613.0</td>\n",
+       "      <td>4769.8</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-10</td>\n",
+       "      <td>142587.0</td>\n",
+       "      <td>13133.2</td>\n",
+       "      <td>8891.2</td>\n",
+       "      <td>2182.6</td>\n",
+       "      <td>6547.0</td>\n",
+       "      <td>7770.0</td>\n",
+       "      <td>22215.0</td>\n",
+       "      <td>3490.3</td>\n",
+       "      <td>2759.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19851.0</td>\n",
+       "      <td>8733.2</td>\n",
+       "      <td>2101.3</td>\n",
+       "      <td>15675.4</td>\n",
+       "      <td>122907.0</td>\n",
+       "      <td>5084.0</td>\n",
+       "      <td>26908.0</td>\n",
+       "      <td>4898.8</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-11</td>\n",
+       "      <td>142824.0</td>\n",
+       "      <td>13174.9</td>\n",
+       "      <td>8898.2</td>\n",
+       "      <td>2198.6</td>\n",
+       "      <td>6598.0</td>\n",
+       "      <td>7756.0</td>\n",
+       "      <td>22260.0</td>\n",
+       "      <td>3502.0</td>\n",
+       "      <td>2766.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19885.0</td>\n",
+       "      <td>8755.5</td>\n",
+       "      <td>2105.2</td>\n",
+       "      <td>15695.0</td>\n",
+       "      <td>123113.0</td>\n",
+       "      <td>5090.0</td>\n",
+       "      <td>26945.0</td>\n",
+       "      <td>4914.7</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-12</td>\n",
+       "      <td>143097.0</td>\n",
+       "      <td>13210.7</td>\n",
+       "      <td>8959.1</td>\n",
+       "      <td>2194.9</td>\n",
+       "      <td>6630.0</td>\n",
+       "      <td>7750.0</td>\n",
+       "      <td>22323.0</td>\n",
+       "      <td>3526.3</td>\n",
+       "      <td>2776.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19955.0</td>\n",
+       "      <td>8765.3</td>\n",
+       "      <td>2109.1</td>\n",
+       "      <td>15699.0</td>\n",
+       "      <td>123359.0</td>\n",
+       "      <td>5088.0</td>\n",
+       "      <td>26978.0</td>\n",
+       "      <td>4946.0</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-2</td>\n",
+       "      <td>140839.0</td>\n",
+       "      <td>12843.2</td>\n",
+       "      <td>8732.4</td>\n",
+       "      <td>2129.2</td>\n",
+       "      <td>6361.0</td>\n",
+       "      <td>7760.0</td>\n",
+       "      <td>21789.0</td>\n",
+       "      <td>3448.4</td>\n",
+       "      <td>2747.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19487.0</td>\n",
+       "      <td>8555.9</td>\n",
+       "      <td>2072.7</td>\n",
+       "      <td>15535.1</td>\n",
+       "      <td>121302.0</td>\n",
+       "      <td>5071.0</td>\n",
+       "      <td>26657.0</td>\n",
+       "      <td>4786.0</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                date         value                      \\\n",
+       "short_title          all_employees accom_food_services   \n",
+       "0             2015-1      140568.0             12790.7   \n",
+       "1            2015-10      142587.0             13133.2   \n",
+       "2            2015-11      142824.0             13174.9   \n",
+       "3            2015-12      143097.0             13210.7   \n",
+       "4             2015-2      140839.0             12843.2   \n",
+       "\n",
+       "                                                                        \\\n",
+       "short_title admin_and_waste_services arts_entertainment_and_recreation   \n",
+       "0                             8719.9                            2124.7   \n",
+       "1                             8891.2                            2182.6   \n",
+       "2                             8898.2                            2198.6   \n",
+       "3                             8959.1                            2194.9   \n",
+       "4                             8732.4                            2129.2   \n",
+       "\n",
+       "                                                                \\\n",
+       "short_title construction durable_goods edu_and_health_services   \n",
+       "0                 6320.0        7752.0                 21741.0   \n",
+       "1                 6547.0        7770.0                 22215.0   \n",
+       "2                 6598.0        7756.0                 22260.0   \n",
+       "3                 6630.0        7750.0                 22323.0   \n",
+       "4                 6361.0        7760.0                 21789.0   \n",
+       "\n",
+       "                                          ...  \\\n",
+       "short_title educational_services federal  ...   \n",
+       "0                         3439.1  2745.0  ...   \n",
+       "1                         3490.3  2759.0  ...   \n",
+       "2                         3502.0  2766.0  ...   \n",
+       "3                         3526.3  2776.0  ...   \n",
+       "4                         3448.4  2747.0  ...   \n",
+       "\n",
+       "                                                \\\n",
+       "short_title professional_and_business_services   \n",
+       "0                                      19442.0   \n",
+       "1                                      19851.0   \n",
+       "2                                      19885.0   \n",
+       "3                                      19955.0   \n",
+       "4                                      19487.0   \n",
+       "\n",
+       "                                                 \\\n",
+       "short_title professional_and_technical_services   \n",
+       "0                                        8526.7   \n",
+       "1                                        8733.2   \n",
+       "2                                        8755.5   \n",
+       "3                                        8765.3   \n",
+       "4                                        8555.9   \n",
+       "\n",
+       "                                                                           \\\n",
+       "short_title real_estate_and_rental_leasing retail_trade service-providing   \n",
+       "0                                   2067.7      15520.2          121068.0   \n",
+       "1                                   2101.3      15675.4          122907.0   \n",
+       "2                                   2105.2      15695.0          123113.0   \n",
+       "3                                   2109.1      15699.0          123359.0   \n",
+       "4                                   2072.7      15535.1          121302.0   \n",
+       "\n",
+       "                                                                 \\\n",
+       "short_title state_government trade_transportation_and_utilities   \n",
+       "0                     5065.0                            26613.0   \n",
+       "1                     5084.0                            26908.0   \n",
+       "2                     5090.0                            26945.0   \n",
+       "3                     5088.0                            26978.0   \n",
+       "4                     5071.0                            26657.0   \n",
+       "\n",
+       "                                            Year Month  \n",
+       "short_title transportation_and_warehousing              \n",
+       "0                                   4769.8  2015     1  \n",
+       "1                                   4898.8  2015    10  \n",
+       "2                                   4914.7  2015    11  \n",
+       "3                                   4946.0  2015    12  \n",
+       "4                                   4786.0  2015     2  \n",
+       "\n",
+       "[5 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use datetime to get month and year from date column\n",
+    "rename_df['Year'] = rename_df['date'].str.split(\"-|;\", n=1, expand=True)[0]\n",
+    "rename_df['Month'] = rename_df['date'].str.split(\"-|;\", n=1, expand=True)[1]\n",
+    "rename_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
