update industry data to include may 2020

--- a/Explore_&Clean_Employee_Statistics.ipynb
+++ b/Explore_&Clean_Employee_Statistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:40.362763Z",
@@ -142,7 +142,7 @@
        "4    Total nonfarm  ALL EMPLOYEES, THOUSANDS  All employees  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:40.377765Z",
@@ -192,7 +192,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:41.252407Z",
@@ -221,7 +221,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:43.202212Z",
@@ -244,21 +244,21 @@
     {
      "data": {
       "text/plain": [
-       "series_id           3958\n",
-       "year                3958\n",
-       "value               3958\n",
-       "industry_code_x     3958\n",
-       "Month               3958\n",
-       "supersector_code    3958\n",
-       "data_type_code      3958\n",
-       "series_title        3958\n",
-       "supersector_name    3958\n",
-       "data_type_text      3958\n",
-       "short_title         3958\n",
+       "series_id           4020\n",
+       "year                4020\n",
+       "value               4020\n",
+       "industry_code_x     4020\n",
+       "Month               4020\n",
+       "supersector_code    4020\n",
+       "data_type_code      4020\n",
+       "series_title        4020\n",
+       "supersector_name    4020\n",
+       "data_type_text      4020\n",
+       "short_title         4020\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:45.218485Z",
@@ -284,7 +284,7 @@
        "62"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:45.905053Z",
@@ -334,21 +334,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>3958.000000</td>\n",
-       "      <td>3958.000000</td>\n",
-       "      <td>3958.000000</td>\n",
+       "      <td>4020.000000</td>\n",
+       "      <td>4020.000000</td>\n",
+       "      <td>4020.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>2017.180394</td>\n",
-       "      <td>19163.943861</td>\n",
-       "      <td>6.255685</td>\n",
+       "      <td>2017.223881</td>\n",
+       "      <td>19131.141841</td>\n",
+       "      <td>6.233831</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>1.545633</td>\n",
-       "      <td>32045.982010</td>\n",
-       "      <td>3.494074</td>\n",
+       "      <td>1.572540</td>\n",
+       "      <td>31995.058394</td>\n",
+       "      <td>3.471714</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -359,19 +359,19 @@
        "    <tr>\n",
        "      <th>25%</th>\n",
        "      <td>2016.000000</td>\n",
-       "      <td>2801.250000</td>\n",
+       "      <td>2800.750000</td>\n",
        "      <td>3.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
        "      <td>2017.000000</td>\n",
-       "      <td>7693.750000</td>\n",
+       "      <td>7688.500000</td>\n",
        "      <td>6.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>2018.000000</td>\n",
-       "      <td>16322.000000</td>\n",
+       "      <td>2019.000000</td>\n",
+       "      <td>16308.950000</td>\n",
        "      <td>9.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -386,17 +386,17 @@
       ],
       "text/plain": [
        "              year          value        Month\n",
-       "count  3958.000000    3958.000000  3958.000000\n",
-       "mean   2017.180394   19163.943861     6.255685\n",
-       "std       1.545633   32045.982010     3.494074\n",
+       "count  4020.000000    4020.000000  4020.000000\n",
+       "mean   2017.223881   19131.141841     6.233831\n",
+       "std       1.572540   31995.058394     3.471714\n",
        "min    2015.000000      90.000000     1.000000\n",
-       "25%    2016.000000    2801.250000     3.000000\n",
-       "50%    2017.000000    7693.750000     6.000000\n",
-       "75%    2018.000000   16322.000000     9.000000\n",
+       "25%    2016.000000    2800.750000     3.000000\n",
+       "50%    2017.000000    7688.500000     6.000000\n",
+       "75%    2019.000000   16308.950000     9.000000\n",
        "max    2020.000000  152463.000000    12.000000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:14:47.315353Z",
@@ -548,7 +548,7 @@
        "4    Total nonfarm  ALL EMPLOYEES, THOUSANDS  All employees  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:15:08.498468Z",
@@ -584,7 +584,7 @@
        "(2048, 11)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:18:01.735681Z",
@@ -698,7 +698,7 @@
        "4  2015      5  141525.0  All employees  2015-5"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:18:50.172974Z",
@@ -1061,7 +1061,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:20:23.132431Z",
@@ -1122,7 +1122,7 @@
        "           names=[None, 'short_title'])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:20:42.462852Z",
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1465,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1476,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1730,7 +1730,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1779,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2035,13 +2035,13 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Use datetime to get month and year from date column\n",
+    "# Use split to get month and year from date column\n",
     "rename_df['Year'] = rename_df['date'].str.split(\"-|;\", n=1, expand=True)[0]\n",
     "rename_df['Month'] = rename_df['date'].str.split(\"-|;\", n=1, expand=True)[1]\n",
     "rename_df.head()"
@@ -2049,7 +2049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
