--- a/CES Employment Data.ipynb
+++ b/CES Employment Data.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:07:08.393180Z",
@@ -52,14 +52,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:07:15.909198Z",
      "start_time": "2020-06-04T03:07:08.395177Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100% [............................................................] 2920 / 2920"
+     ]
+    }
+   ],
    "source": [
     "# Check if file has ben downloaded if not download the file\n",
     "# This could take a while first time downloading the files (over 5 mins)\n",
@@ -113,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:07:18.797323Z",
@@ -131,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:07:23.115305Z",
@@ -142,10 +150,10 @@
     {
      "data": {
       "text/plain": [
-       "(804591, 6)"
+       "(817183, 6)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:07:23.704309Z",
@@ -172,7 +180,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "e:\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:4: SettingWithCopyWarning:\n",
+      "C:\\Users\\danjr\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:4: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -180,7 +188,7 @@
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "\n",
-      "e:\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\frame.py:3997: SettingWithCopyWarning:\n",
+      "C:\\Users\\danjr\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:3997: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
@@ -200,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:07:24.359307Z",
@@ -211,10 +219,10 @@
     {
      "data": {
       "text/plain": [
-       "(804591, 12)"
+       "(817183, 12)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:07:24.794310Z",
@@ -238,10 +246,10 @@
     {
      "data": {
       "text/plain": [
-       "(804591, 18)"
+       "(817183, 18)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:07:25.169304Z",
@@ -265,10 +273,10 @@
     {
      "data": {
       "text/plain": [
-       "(804591, 19)"
+       "(817183, 19)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:07:25.589314Z",
@@ -292,10 +300,10 @@
     {
      "data": {
       "text/plain": [
-       "(804591, 20)"
+       "(817183, 20)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:07:25.978307Z",
@@ -319,10 +327,10 @@
     {
      "data": {
       "text/plain": [
-       "(97155, 20)"
+       "(98694, 20)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:07:26.009308Z",
@@ -357,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:07:26.041310Z",
@@ -368,10 +376,10 @@
     {
      "data": {
       "text/plain": [
-       "(3958, 10)"
+       "(4020, 10)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:07:26.056320Z",
@@ -409,10 +417,10 @@
     {
      "data": {
       "text/plain": [
-       "(3958, 11)"
+       "(4020, 11)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:07:44.680818Z",
@@ -442,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:07:44.802817Z",
@@ -456,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-04T03:07:44.817819Z",
@@ -479,9 +487,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.10 64-bit ('PythonData': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python361064bitpythondatacondaec7e8270480d4d8a925de6dc1659eacb"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -493,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
