--- a/Explore_&Clean_Employee_Statistics.ipynb
+++ b/Explore_&Clean_Employee_Statistics.ipynb
@@ -1025,7 +1025,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Push to SQLite\n",
+    "engine = create_engine('sqlite:///data/industry_data.db', echo=False)\n",
+    "final_df.to_sql('austinAccidents',con=engine,if_exists='replace')"
+   ]
   }
  ],
  "metadata": {
