Cleaning up Labor demographics code for better chart representation

--- a/Explore_&_Clean_Labor_Statistics.ipynb
+++ b/Explore_&_Clean_Labor_Statistics.ipynb
@@ -365,26 +365,26 @@
     {
      "data": {
       "text/plain": [
-       "LNS13032183    65\n",
-       "LNS13024230    65\n",
-       "LNS13000000    65\n",
-       "LNS11000002    65\n",
-       "LNS11000001    65\n",
-       "LNS13027662    65\n",
-       "LNS13000012    65\n",
-       "LNS13027689    65\n",
-       "LNS13000091    65\n",
-       "LNS13000002    65\n",
-       "LNS13027659    65\n",
-       "LNS13000001    65\n",
-       "LNS13000093    65\n",
        "LNS13000006    65\n",
-       "LNS11000000    65\n",
+       "LNS13027659    65\n",
+       "LNS13000002    65\n",
+       "LNS13000000    65\n",
+       "LNS13000001    65\n",
        "LNS13027660    65\n",
-       "LNS13000089    65\n",
+       "LNS11000000    65\n",
        "LNS13000003    65\n",
+       "LNS13027662    65\n",
+       "LNS13032183    65\n",
        "LNS13000009    65\n",
        "LNS13000036    65\n",
+       "LNS13024230    65\n",
+       "LNS13000091    65\n",
+       "LNS13000012    65\n",
+       "LNS13027689    65\n",
+       "LNS13000089    65\n",
+       "LNS13000093    65\n",
+       "LNS11000002    65\n",
+       "LNS11000001    65\n",
        "Name: series_id, dtype: int64"
       ]
      },
@@ -988,18 +988,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       year  month    claims                           category    date\n",
-      "0      2015      1  157030.0  (Seas) Civilian Labor Force Level  2015-1\n",
-      "1      2015      2  156644.0  (Seas) Civilian Labor Force Level  2015-2\n",
-      "2      2015      3  156643.0  (Seas) Civilian Labor Force Level  2015-3\n",
-      "3      2015      4  157060.0  (Seas) Civilian Labor Force Level  2015-4\n",
-      "4      2015      5  157651.0  (Seas) Civilian Labor Force Level  2015-5\n",
-      "...     ...    ...       ...                                ...     ...\n",
-      "29375  2020      1     315.0  (Seas) Unemployment Level - Asian  2020-1\n",
-      "29376  2020      2     262.0  (Seas) Unemployment Level - Asian  2020-2\n",
-      "29377  2020      3     433.0  (Seas) Unemployment Level - Asian  2020-3\n",
-      "29378  2020      4    1438.0  (Seas) Unemployment Level - Asian  2020-4\n",
-      "29379  2020      5    1493.0  (Seas) Unemployment Level - Asian  2020-5\n",
+      "       year  month  number_of_persons                           category  \\\n",
+      "0      2015      1           157030.0  (Seas) Civilian Labor Force Level   \n",
+      "1      2015      2           156644.0  (Seas) Civilian Labor Force Level   \n",
+      "2      2015      3           156643.0  (Seas) Civilian Labor Force Level   \n",
+      "3      2015      4           157060.0  (Seas) Civilian Labor Force Level   \n",
+      "4      2015      5           157651.0  (Seas) Civilian Labor Force Level   \n",
+      "...     ...    ...                ...                                ...   \n",
+      "29375  2020      1              315.0  (Seas) Unemployment Level - Asian   \n",
+      "29376  2020      2              262.0  (Seas) Unemployment Level - Asian   \n",
+      "29377  2020      3              433.0  (Seas) Unemployment Level - Asian   \n",
+      "29378  2020      4             1438.0  (Seas) Unemployment Level - Asian   \n",
+      "29379  2020      5             1493.0  (Seas) Unemployment Level - Asian   \n",
+      "\n",
+      "         date  \n",
+      "0      2015-1  \n",
+      "1      2015-2  \n",
+      "2      2015-3  \n",
+      "3      2015-4  \n",
+      "4      2015-5  \n",
+      "...       ...  \n",
+      "29375  2020-1  \n",
+      "29376  2020-2  \n",
+      "29377  2020-3  \n",
+      "29378  2020-4  \n",
+      "29379  2020-5  \n",
       "\n",
       "[1300 rows x 5 columns]\n"
      ]
@@ -1017,7 +1030,7 @@
     }
    ],
    "source": [
-    "unemp_df.rename(columns={'Month':'month','value':'claims','series_title':'category'}, inplace=True)\n",
+    "unemp_df.rename(columns={'Month':'month','value':'number_of_persons','series_title':'category'}, inplace=True)\n",
     "print(unemp_df)"
    ]
   },
@@ -1077,22 +1090,22 @@
     "                                  \"(Seas) Civilian Labor Force Level - Men\":\"labor_force_men\",\n",
     "                                  \"(Seas) Civilian Labor Force Level - Women\":\"labor_force_women\",\n",
     "                                  \"(Seas) Unemployment Level\":\"unemployment_total\",\n",
-    "                                  \"(Seas) Unemployment Level - Men\":\"gender_men\",\n",
-    "                                  \"(Seas) Unemployment Level - Women\":\"gender_women\",\n",
-    "                                  \"(Seas) Unemployment Level - White\":\"ethnicity_caucasian\",\n",
-    "                                  \"(Seas) Unemployment Level - Black or African American\":\"ethnicity_african_american\",\n",
-    "                                  \"(Seas) Unemployment Level - Hispanic or Latino\":\"ethnicity_hispanic\",\n",
-    "                                  \"(Seas) Unemployment Level - Asian\":\"ethnicity_asian\",\n",
-    "                                  \"(Seas) Unemployment Level - 16-19 yrs.\":\"age_range_16-19\",\n",
-    "                                  \"(Seas) Unemployment Level - 20-24 yrs.\":\"age_range_20-24\",\n",
-    "                                  \"(Seas) Unemployment Level - 25-34 yrs.\":\"age_range_25-34\",\n",
-    "                                  \"(Seas) Unemployment Level - 35-44 yrs.\":\"age_range_35-44\",\n",
-    "                                  \"(Seas) Unemployment Level - 45-54 yrs.\":\"age_range_45-54\",\n",
-    "                                  \"(Seas) Unemployment Level - 55 yrs. & over\":\"age_range_55_and_over\",\n",
-    "                                  \"(Seas) Unemployment Level - Less than a High School Diploma, 25 yrs. & over\":\"education_less_than_highschool_diploma\",\n",
-    "                                  \"(Seas) Unemployment Level - High School Graduates, No College, 25 yrs. & over\":\"education_highschool_no_college\",\n",
-    "                                  \"(Seas) Unemployment Level - Some College or Associate Degree, 25 yrs. & over\":\"education_some_college_or_associate_degree\",\n",
-    "                                  \"(Seas) Unemployment Level - Bachelor's degree and higher, 25 yrs. & over\":\"education_bachelors_degree_and_higher\"\n",
+    "                                  \"(Seas) Unemployment Level - Men\":\"men\",\n",
+    "                                  \"(Seas) Unemployment Level - Women\":\"women\",\n",
+    "                                  \"(Seas) Unemployment Level - White\":\"caucasian\",\n",
+    "                                  \"(Seas) Unemployment Level - Black or African American\":\"african_american\",\n",
+    "                                  \"(Seas) Unemployment Level - Hispanic or Latino\":\"hispanic\",\n",
+    "                                  \"(Seas) Unemployment Level - Asian\":\"asian\",\n",
+    "                                  \"(Seas) Unemployment Level - 16-19 yrs.\":\"16-19\",\n",
+    "                                  \"(Seas) Unemployment Level - 20-24 yrs.\":\"20-24\",\n",
+    "                                  \"(Seas) Unemployment Level - 25-34 yrs.\":\"25-34\",\n",
+    "                                  \"(Seas) Unemployment Level - 35-44 yrs.\":\"35-44\",\n",
+    "                                  \"(Seas) Unemployment Level - 45-54 yrs.\":\"45-54\",\n",
+    "                                  \"(Seas) Unemployment Level - 55 yrs. & over\":\"55_and_over\",\n",
+    "                                  \"(Seas) Unemployment Level - Less than a High School Diploma, 25 yrs. & over\":\"less_than_highschool_diploma\",\n",
+    "                                  \"(Seas) Unemployment Level - High School Graduates, No College, 25 yrs. & over\":\"highschool_no_college\",\n",
+    "                                  \"(Seas) Unemployment Level - Some College or Associate Degree, 25 yrs. & over\":\"some_college_or_associate_degree\",\n",
+    "                                  \"(Seas) Unemployment Level - Bachelor's degree and higher, 25 yrs. & over\":\"bachelors_degree_and_higher\"\n",
     "                                 },inplace=True)"
    ]
   },
@@ -1105,18 +1118,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       year  month    claims           category    date\n",
-      "0      2015      1  157030.0  labor_force_total  2015-1\n",
-      "1      2015      2  156644.0  labor_force_total  2015-2\n",
-      "2      2015      3  156643.0  labor_force_total  2015-3\n",
-      "3      2015      4  157060.0  labor_force_total  2015-4\n",
-      "4      2015      5  157651.0  labor_force_total  2015-5\n",
-      "...     ...    ...       ...                ...     ...\n",
-      "29375  2020      1     315.0    ethnicity_asian  2020-1\n",
-      "29376  2020      2     262.0    ethnicity_asian  2020-2\n",
-      "29377  2020      3     433.0    ethnicity_asian  2020-3\n",
-      "29378  2020      4    1438.0    ethnicity_asian  2020-4\n",
-      "29379  2020      5    1493.0    ethnicity_asian  2020-5\n",
+      "       year  month  number_of_persons           category    date\n",
+      "0      2015      1           157030.0  labor_force_total  2015-1\n",
+      "1      2015      2           156644.0  labor_force_total  2015-2\n",
+      "2      2015      3           156643.0  labor_force_total  2015-3\n",
+      "3      2015      4           157060.0  labor_force_total  2015-4\n",
+      "4      2015      5           157651.0  labor_force_total  2015-5\n",
+      "...     ...    ...                ...                ...     ...\n",
+      "29375  2020      1              315.0              asian  2020-1\n",
+      "29376  2020      2              262.0              asian  2020-2\n",
+      "29377  2020      3              433.0              asian  2020-3\n",
+      "29378  2020      4             1438.0              asian  2020-4\n",
+      "29379  2020      5             1493.0              asian  2020-5\n",
       "\n",
       "[1300 rows x 5 columns]\n"
      ]
